--- a/app/globals.css
+++ b/app/globals.css
@@ -8,4 +8,8 @@
 @import 'leaflet/dist/leaflet.css';
 @import 'leaflet-draw/dist/leaflet.draw.css';
 
+html, body, #__next { height: 100%; }
+.leaflet-container { height: 100%; width: 100%; }
+
+
 
